# unlimited-ocr-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  Containerfile.gpu  README.md  compose.yml  config.example.toml  justfile  qualirs.toml  run_podman.sh
.github/workflows/: rust.yml
docs/: configuration.md  http-api.md  metadata-and-cleanup.md  model-files.md  openapi.json  python-client.md  running.md  tasks.md
examples/: python_client.py
scripts/: compare_execution_providers.sh
src/: api.rs  config.rs  inference.rs  jobs.rs  main.rs  pdf.rs  state.rs  templates.rs  types.rs  util.rs
src/api/: docs.rs  security.rs  submit.rs  system.rs  tests.rs
src/api/submit/: validation.rs
src/config/: defaults.rs  file.rs  model_variant.rs  settings.rs  tests.rs
src/inference/: feeds.rs  image.rs  model.rs  parse.rs  prompt.rs  tensor.rs  tests.rs
src/jobs/: queue.rs  store.rs  tests.rs  webhook.rs  worker.rs
src/types/: inference.rs  job.rs  responses.rs  task.rs  tests.rs
